subtasks werden in Detailcard richtig angezeigt und Hovereffect der Sidebar in Board wird angezeigt

--- a/assets/templates/desktop_template.html
+++ b/assets/templates/desktop_template.html
@@ -22,15 +22,15 @@
     <nav>
         <img class="logoSidebar" src="../../assets/img/logoSidebar.png" alt="">
         <div class="menuSidebar">
-            <div class="menuFrames" onclick="">
+            <div id="frameSummary" class="menuFrames" onclick="">
                 <div class="iconSidebar flex_center">
-                    <div class="imgSidebar imgSummary"></div>
+                    <div id="imgFrameSummary" class="imgSidebar imgSummary"></div>
                 </div>
                 <p class="menuSidebarHover">Summary</p>
             </div>
-            <div class="menuFrames" onclick="">
+            <div id="frameAddtasks" class="menuFrames" onclick="">
                 <div class="iconSidebar flex_center">
-                    <div class="imgSidebar imgAddTask"></div>
+                    <div id="imgFrameAddtask" class="imgSidebar imgAddTask"></div>
                 </div>
                 <p class="menuSidebarHover">Add Task</p>
             </div>
@@ -40,9 +40,9 @@
                 </div>
                 <p class="menuSidebarHover">Board</p> 
             </div>
-            <div class="menuFrames" onclick="">
+            <div id="frameContacts" class="menuFrames" onclick="">
                 <div class="iconSidebar flex_center">
-                    <div class="imgSidebar imgContacts"></div>
+                    <div id="imgFrameContacts" class="imgSidebar imgContacts"></div>
                 </div>
                 <p class="menuSidebarHover">Contacts</p>
             </div>
