--- a/css/board.css
+++ b/css/board.css
@@ -739,6 +739,7 @@ input::placeholder{
     font-weight: 400;
     font-size: 16px;
     line-height: 19.2px;
+    cursor: pointer;
 }
 
 .imgDetaildelete{
