--- a/css/contactsFullscreen.css
+++ b/css/contactsFullscreen.css
@@ -97,14 +97,8 @@
 }
 
 .fullContactDetails {
-  width: 461px;
-  height: 364px;
   top: 311px;
-  left: 750px;
-  gap: 21px;
   position: fixed;
-  display: flex;
-  align-items: center;
 }
 
 .fullContactHeader {
@@ -121,10 +115,24 @@
   border-radius: 70px 0px 0px 0px;
   border: 3px solid #ffffff;
   box-shadow: 0px 0px 4px 0px #0000001a;
+  display: flex;
+  font-size: 47px;
+  font-weight: 500;
+  line-height: 56.4px;
+  text-align: center;
+  color: #ffffff;
+}
+
+.contactNameButtons {
+  width: 287px;
+  height: 88px;
+  gap: 8px;
+  display: flex;
+  flex-direction: column;
 }
 
 .contactDetailsName {
-  width: 287px;
+  width: 400px;
   height: 56px;
   font-size: 47px;
   font-weight: 500;
@@ -182,12 +190,19 @@
   font-weight: 400;
   line-height: 24px;
   text-align: left;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  justify-content: center;
 }
 
 .contactInfoDetails {
   width: 140px;
   height: 128px;
   gap: 22px;
+  display: flex;
+  flex-direction: column;
 }
 
 .contactInfoEmail {
