--- a/css/contacts.css
+++ b/css/contacts.css
@@ -316,6 +316,12 @@ input[type="tel"]:focus {
   align-items: center;
 }
 
+.addContactButton:hover{
+  background-color: #29abe2;
+  border: none;
+  box-shadow: 0px 4px 4px 0px #00000040;
+}
+
 /*Kontakliste*/
 .contactList {
   display: flex;
