minor changes and additions

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -316,7 +316,7 @@ input[type="tel"]:focus {
   align-items: center;
 }
 
-.addContactButton:hover{
+.addContactButton:hover {
   background-color: #29abe2;
   border: none;
   box-shadow: 0px 4px 4px 0px #00000040;
@@ -377,10 +377,14 @@ input[type="tel"]:focus {
   font-weight: 400;
   line-height: 14.4px;
   text-align: center;
-  position: relative;
   width: 42px;
   height: 42px;
   color: #ffffff;
+  border-radius: 50%;
+  border: 2px solid #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .contactName {
@@ -402,4 +406,3 @@ input[type="tel"]:focus {
   text-align: left;
   color: #007cee;
 }
-
