--- a/css/contactsFullscreen.css
+++ b/css/contactsFullscreen.css
@@ -94,7 +94,7 @@
   position: fixed;
   display: flex;
   align-items: center;
-  transition: left 0.5s ease; 
+  transition: left 0.5s ease;
 }
 .contactsFullscreen.in {
   left: 750px;
@@ -120,7 +120,7 @@
   width: 120px;
   height: 120px;
   gap: 10px;
-  border-radius: 70px 0px 0px 0px;
+  border-radius: 70px;
   border: 3px solid #ffffff;
   box-shadow: 0px 0px 4px 0px #0000001a;
   display: flex;
@@ -129,6 +129,8 @@
   line-height: 56.4px;
   text-align: center;
   color: #ffffff;
+  justify-content: center;
+  align-items: center;
 }
 
 .contactNameButtons {
@@ -176,7 +178,7 @@
   height: 24px;
 }
 
-.deleteImg{
+.deleteImg {
   width: 24px;
   height: 24px;
 }
@@ -195,20 +197,19 @@
   border: none;
   background-color: #f6f7f8;
   cursor: pointer;
-  transition: transform 0.2s ease, color 0.2s ease;
 }
 
 .contactDetailsButtons button:hover {
   color: #29abe2;
-  transform: scale(1.1);
+  font-weight: 700;
 }
 
 .contactDetailsButtons button.editContactButton:hover img {
-  content: url('../assets/img/editHover.svg');
+  content: url("../assets/img/editHover.svg");
 }
 
 .contactDetailsButtons button.deleteContactButton:hover img {
-  content: url('../assets/img/deleteHover.svg');
+  content: url("../assets/img/deleteHover.svg");
 }
 
 .contactInfoHeader {
@@ -284,4 +285,26 @@
   line-height: 19.2px;
   text-align: left;
   color: #000000;
+}
+
+/*Overlay erstellter Kontakt*/
+
+.contactCreatedOverlay {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  color: white;
+  background: #2a3647;
+  box-shadow: 0px 0px 4px 0px #00000026;
+  width: 326px;
+  height: 74px;
+  top: 700px;
+  left: 300px;
+  gap: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+  position: relative;
 }
