--- a/css/contacts.css
+++ b/css/contacts.css
@@ -38,7 +38,7 @@ body {
   right: 50%;
 }
 
-/*Overlay-Fenster schließen*/
+/*Close overlay window*/
 
 .closeOverlay {
   position: absolute;
@@ -56,7 +56,7 @@ body {
   border-radius: 50%;
 }
 
-/*Overlay links*/
+/*Overlay left*/
 .leftOverlayContent {
   width: 467px;
   height: 594px;
@@ -108,7 +108,7 @@ body {
   margin-top: 10px;
 }
 
-/*Overlay rechts*/
+/*Overlay right*/
 
 .rightOverlayContent {
   display: flex;
@@ -186,7 +186,7 @@ input[type="tel"]:focus {
   transform: translateY(-50%);
 }
 
-/*Overlay-Buttons*/
+/*Overlay buttons*/
 
 .contactButtons {
   display: flex;
@@ -269,7 +269,7 @@ input[type="tel"]:focus {
   box-shadow: 0px 4px 4px 0px #00000040;
 }
 
-/*Kontakt-Seitenleiste*/
+/*Contact sidebar*/
 
 .contactsSidebar {
   width: 456px;
@@ -284,7 +284,7 @@ input[type="tel"]:focus {
   overflow-x: hidden;
 }
 
-/*Button-Div*/
+/*Button div*/
 
 .buttonContainer {
   width: 456px;
@@ -322,7 +322,7 @@ input[type="tel"]:focus {
   box-shadow: 0px 4px 4px 0px #00000040;
 }
 
-/*Kontakliste*/
+/*Contact list*/
 .contactList {
   display: flex;
   flex-direction: column;
