--- a/css/contactsFullscreen.css
+++ b/css/contactsFullscreen.css
@@ -310,14 +310,44 @@
   transition: left 0.8s ease;
 }
 
-.contactCreatedOverlayHidden{
+.contactCreatedOverlayHidden {
   display: none;
 }
 
-.contactCreatedOverlay.in{
+.contactCreatedOverlay.in {
   left: 300px;
 }
 
-.contactCreatedOverlay.out{
+.contactCreatedOverlay.out {
   left: 2000px;
+}
+
+/*Colours*/
+
+.orange {
+  background-color: #ff7a00;
+}
+
+.purple {
+  background-color: #9327ff;
+}
+
+.blue {
+  background-color: #6e52ff;
+}
+
+.pink {
+  background-color: #fc71ff;
+}
+
+.yellow {
+  background-color: #ffbb2b;
+}
+
+.green {
+  background-color: #1fd7c1;
+}
+
+.red {
+  background-color: #e02f2f;
 }
