--- a/css/add_task.css
+++ b/css/add_task.css
@@ -18,6 +18,10 @@ html {
     margin-bottom: 40px;
 }
 
+body {
+    max-width: 1440px;
+}
+
 h1 {
     font-size: 61px;
 }
@@ -73,6 +77,7 @@ input {
     width: 440px;
     height: 48px;
     padding: 12px 16px;
+    cursor: pointer;
 }
 
 #input-title {
@@ -151,7 +156,12 @@ input {
     width: 440px;
     background-color: #2A3647;
     color: white;
-  }
+}
+
+.contact-span:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+}
 
 .seperator {
     width: 0;
@@ -268,16 +278,36 @@ input {
 
 #show-contacts {
     width: 440px;
+    height: 200px;
     overflow-y: auto;
+    overflow-x: hidden;
+    position: absolute;
+    bottom: 50px;
+    left: 360px;
+    border-radius: 10px;
 }
 
 .contact-list {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
+    padding: 10px;
+    background-color: #FFFFFF;
+    color: black;
 }
 
 .contacts-checkbox {
     width: 20px;
+    height: 30px;
 }
 
+.contacts-checkbox {
+    border: 3px solid black;
+}
+
+.contact-span {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 20px;
+}
