--- a/assets/templates/desktop_template.html
+++ b/assets/templates/desktop_template.html
@@ -22,25 +22,25 @@
     <nav>
         <img class="logoSidebar" src="../../assets/img/logoSidebar.png" alt="">
         <div class="menuSidebar">
-            <div id="frameSummary" class="menuFrames" onclick="">
+            <div id="frameSummary" class="menuFrames" onclick="location.href='summary.html';">
                 <div class="iconSidebar flex_center">
                     <div id="imgFrameSummary" class="imgSidebar imgSummary"></div>
                 </div>
                 <p class="menuSidebarHover">Summary</p>
             </div>
-            <div id="frameAddtasks" class="menuFrames" onclick="">
+            <div id="frameAddtasks" class="menuFrames" onclick="location.href='add_task.html';">
                 <div class="iconSidebar flex_center">
                     <div id="imgFrameAddtask" class="imgSidebar imgAddTask"></div>
                 </div>
                 <p class="menuSidebarHover">Add Task</p>
             </div>
-            <div id="frameBoard" class="menuFrames" onclick="">
+            <div id="frameBoard" class="menuFrames" onclick="location.href='board.html';">
                 <div class="iconSidebar flex_center">
                     <div id="imgFrameBoard" class="imgSidebar imgBoard"></div>
                 </div>
                 <p class="menuSidebarHover">Board</p> 
             </div>
-            <div id="frameContacts" class="menuFrames" onclick="">
+            <div id="frameContacts" class="menuFrames" onclick="location.href='contacts.html';">
                 <div class="iconSidebar flex_center">
                     <div id="imgFrameContacts" class="imgSidebar imgContacts"></div>
                 </div>
