--- a/style.css
+++ b/style.css
@@ -8,13 +8,13 @@ body {
   margin: 0;
 }
 
-/*CSS für Mainpage*/
+/*CSS for Mainpage*/
 
 .mainpage {
   overflow: hidden;
 }
 
-/*Animation am Anfang*/
+/*Animation at the beginning*/
 
 #animatedLogo {
   position: fixed;
@@ -40,7 +40,7 @@ body {
   transition: opacity 100ms ease-in-out, visibility 100ms ease-in-out;
 }
 
-/*Login-Seite rechts oben*/
+/*Login page top right*/
 
 .mainpageSignUpContainer {
   width: 279px;
@@ -85,7 +85,7 @@ body {
   box-shadow: 0px 4px 4px 0px #00000040;
 }
 
-/*Login-Seite Login-Kasten*/
+/*Login page login box*/
 
 .loginContainer {
   display: flex;
@@ -103,7 +103,7 @@ body {
   position: absolute;
 }
 
-/*Login-Überschrift*/
+/*Login headline*/
 
 .loginHeadline {
   font-family: Inter;
@@ -130,7 +130,7 @@ body {
   border-bottom: 3px solid #29abe2;
 }
 
-/*Loginkästchen*/
+/*Login credentials box*/
 
 .mainCredentials {
   height: 196px;
@@ -217,7 +217,7 @@ input[type="password"].error {
   cursor: pointer;
 }
 
-/*Remember-Abschnitt*/
+/*Remember me section*/
 
 .rememberMeSection {
   display: flex;
@@ -271,7 +271,7 @@ input[type="password"].error {
   cursor: pointer;
 }
 
-/*Login-Abschnitt Buttons*/
+/*Login section buttons*/
 
 .loginButtons {
   display: flex;
@@ -331,7 +331,7 @@ input[type="password"].error {
   box-shadow: 0px 4px 4px 0px #00000040;
 }
 
-/*Datenschutz Buttons*/
+/*Privacy buttons*/
 
 .legalButtonsContainer {
   display: flex;
