--- a/css/signup.css
+++ b/css/signup.css
@@ -112,7 +112,8 @@ body {
   color: red;
   font-size: 12px;
   position: absolute;
-  top: calc(72% + 5px);
+  top: 300px;
+  left: 0px;
 }
 
 .signupEmail {
@@ -187,6 +188,8 @@ input.confirmPassword.error {
   line-height: 19.2px;
   text-align: left;
   padding-left: 30px;
+  width: 231px;
+  height: 24px;
 }
 
 .checkboxRemember,
