--- a/css/add_task.css
+++ b/css/add_task.css
@@ -26,6 +26,10 @@ h1 {
     font-size: 61px;
 }
 
+.d-none {
+    display: none;
+}
+
 .btn {
     width: 136px;
     height: 56px;
@@ -66,6 +70,10 @@ input {
     height: 424px;
 }
 
+.content-right {
+    gap: 8px;
+}
+
 #input-title,
 #input-description,
 #input-assigned {
@@ -101,6 +109,23 @@ input {
 #input-assigny {
     cursor: pointer;
     line-height: 24px;
+    position: relative;
+}
+
+.input-container-contacts {
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;   
+    position: relative; 
+}
+
+#display-initials {
+    display: flex;
+    gap: 4px;
+    position: absolute;
+    bottom: 280px;
+    z-index: -1;
 }
 
 .input-container {
@@ -120,8 +145,6 @@ input {
     height: 130px;
     display: flex;
     flex-direction: column;
-    position: absolute;
-    right: 40px;
     font-size: 24px;
     overflow: auto;
 }
@@ -142,6 +165,7 @@ input {
     background-color: inherit;
     font-size: 24px;
     color: #2A3647;
+    position: absolute;
 }
 
 .add-button:hover {
@@ -224,7 +248,7 @@ input {
 }
 
 #input-date {
-    padding: 12px 16px;
+    padding: 25px 16px;
     margin-bottom: 20px;
     cursor: pointer;
 }
@@ -237,6 +261,11 @@ input {
 
 .input-subtask-span {
     position: absolute;
+}
+
+.subtask-span {
+    padding-left: 20px;
+    list-style: circle;
 }
 
 .footer {
@@ -281,8 +310,7 @@ input {
     height: 200px;
     overflow-y: auto;
     overflow-x: hidden;
-    position: absolute;
-    bottom: 50px;
+    bottom: 58px;
     left: 360px;
     border-radius: 10px;
 }
