--- a/css/add_task.css
+++ b/css/add_task.css
@@ -38,6 +38,11 @@ h1 {
     line-height: 24px;
     background-color: #FFFFFF;
     cursor: pointer;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 25%);
+}
+
+.btn:active {
+   box-shadow: 0 4px 4px rgba(0, 0, 0, 0);
 }
 
 .span-star {
@@ -122,8 +127,8 @@ input {
 
 #display-initials {
     display: grid;
-    position: absolute;
-    bottom: 210px;
+    position: fixed;
+    bottom: 330px;
     z-index: -1;
     width: 440px;
     grid-template-columns: repeat(8, 1fr);
@@ -278,6 +283,11 @@ input {
     font-size: 16px;
 }
 
+.button-footer {
+    display: flex;
+    gap: 20px;
+}
+
 .btn-footer-clear,
 .btn-footer-create {
     height: 56px;
@@ -286,6 +296,11 @@ input {
     padding: 16px;
     cursor: pointer;
     font-size: 20px;
+}
+
+.btn-footer-clear:active {
+    border: 1px solid #29ABE2;
+    color: #29ABE2;
 }
 
 .btn-footer-create {
@@ -363,13 +378,12 @@ input {
     justify-content: space-evenly;
     align-items: center;
     top: 50%;
-    left: 50%;
+    left: 40%;
     background-color: rgba(42, 54, 71, 1);
     color: white;
     font-size: 24px;
     border-radius: 15px;
     transition: all 125ms ease-in-out;
-    transform: translateY(500px);
 }
 
 
