--- a/css/signup_mediaqueries.css
+++ b/css/signup_mediaqueries.css
@@ -25,3 +25,92 @@
     left: calc(20%);
   }
 }
+
+@media (max-width: 428px) and (max-height: 926px) {
+  .logoSignupPage {
+    width: 64px;
+    height: 78.03px;
+    top: 37px;
+    left: 38px;
+    gap: 10px;
+    opacity: 0px;
+    display: flex;
+  }
+
+  .signupContainer {
+    width: 396px;
+    height: 595px;
+    top: 165.5px;
+    left: 16px;
+    padding: 32px 0px 32px 0px;
+    gap: 32px;
+    border-radius: 30px;
+  }
+
+  .signupHeadline {
+    width: 173px;
+    height: 72px;
+    gap: 16px;
+    font-size: 47px;
+    font-weight: 700;
+    line-height: 56.4px;
+    text-align: center;
+  }
+
+  .signupArrow {
+    top: 32px;
+    left: 32px;
+  }
+
+  .signupInputFields {
+    width: 364px;
+    height: 286px;
+    gap: 24px;
+    display: flex;
+    align-items: center;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .signupEmail {
+    width: 322px;
+  }
+
+  .signupPassword {
+    width: 322px;
+  }
+
+  .signupButton {
+    width: 180px;
+    height: 51px;
+    padding: 4px 0px 4px 0px;
+  }
+
+  .legalButtonsContainer {
+    width: 246px;
+    height: 35px;
+    top: 869px;
+    left: 91px;
+    gap: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .legalButtonLeft {
+    width: 121px;
+    height: 35px;
+    padding: 8px 0px 0px 0px;
+    gap: 8px;
+  }
+
+  .legalButtonRight {
+    width: 109px;
+    height: 35px;
+    left: 137px;
+    padding: 8px 0px 0px 0px;
+    gap: 8px;
+  }
+}
