--- a/css/index_mediaqueries.css
+++ b/css/index_mediaqueries.css
@@ -1,5 +1,5 @@
 @media (max-width: 1320px) {
-  .mainpageSignupContainer {
+  .mainpageSignUpContainer {
     width: 292px;
     height: 49px;
     top: 800px;
