--- a/css/index_mediaqueries.css
+++ b/css/index_mediaqueries.css
@@ -31,7 +31,62 @@
     display: flex;
   }
 
-  
+  .loginContainer {
+    width: 396px;
+    height: 515px;
+    top: 205.5px;
+    left: 16px;
+    padding: 32px 0px 32px 0px;
+    gap: 32px;
+    border-radius: 30px;
+  }
+
+  .interactionContainer {
+    width: 364px;
+    height: 192px;
+    gap: 16px;
+  }
+
+  .rememberMeSection{
+    width: 327px;
+    height: 24px;
+    padding: 0px 16px 0px 16px;
+    gap: 16px;
+  }
+
+  .loginButtons {
+    width: 180px;
+    height: 123px;
+    gap: 21px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .mainpageLoginButton {
+    width: 180px;
+    height: 51px;
+    padding: 4px 0px 4px 0px;
+    gap: 10px;
+    border-radius: 8px;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19.2px;
+    text-align: left;
+  }
+
+  .mainpageGuestButton {
+    width: 180px;
+    height: 51px;
+    padding: 4px 0px 4px 0px;
+    gap: 10px;
+    border-radius: 8px;
+    border: 1px 0px 0px 0px;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19.2px;
+    text-align: left;
+  }
 }
 
 @media (max-width: 428px) and (max-height: 926px) {
