new animation login

--- a/css/index_mediaqueries.css
+++ b/css/index_mediaqueries.css
@@ -13,11 +13,11 @@
   }
 
   .mainpageSignUpContainer {
-    left: calc((100vw-292px) / 2);
+    left: calc((100vw - 292px) / 2);
   }
 
   .legalButtonsContainer {
-    left: calc((100vw -246px) / 2);
+    left: calc((100vw - 246px) / 2);
   }
 }
 
