--- a/css/index_mediaqueries.css
+++ b/css/index_mediaqueries.css
@@ -23,22 +23,22 @@
 
 @media (max-width: 670px) {
   #animatedLogo {
-    width: 64px;
-    height: 78.03px;
-    top: 37px;
-    left: 38px;
+    width: 64px !important;
+    height: 78.03px !important;
+    top: 37px !important;
+    left: 38px !important;
     gap: 10px;
     display: flex;
   }
 
   .loginContainer {
-    width: 396px;
+    width: 422px;
     height: 515px;
     top: 205.5px;
-    left: 16px;
-    padding: 32px 0px 32px 0px;
+    padding: 32px 70px 32px 70px;
     gap: 32px;
     border-radius: 30px;
+    left: calc((100vw - 562px) / 2);
   }
 
   .interactionContainer {
@@ -47,7 +47,11 @@
     gap: 16px;
   }
 
-  .rememberMeSection{
+  .errorMessage {
+    position: relative;
+  }
+
+  .rememberMeSection {
     width: 327px;
     height: 24px;
     padding: 0px 16px 0px 16px;
@@ -91,12 +95,20 @@
 
 @media (max-width: 428px) and (max-height: 926px) {
   #animatedLogo {
-    width: 64px;
-    height: 78.03px;
-    top: 37px;
-    left: 38px;
+    width: 64px !important;
+    height: 78.03px !important;
+    top: 37px !important;
+    left: 38px !important;
     gap: 10px;
     display: flex;
+    background: #2a3647;
+  }
+
+  #animatedLogo {
+    background-image: url("./assets/img/whiteLogoLarge.svg");
+  }
+  #animatedLogo.animation-end {
+    background-image: url("./assets/img/logoLarge.svg");
   }
 
   .mainpageSignUpContainer {
@@ -131,11 +143,11 @@
   }
 
   .loginContainer {
-    width: 396px;
-    height: 515px;
-    top: 205.5px;
-    left: 16px;
-    padding: 32px 0px 32px 0px;
+    width: 396px !important;
+    height: 515px !important;
+    top: 205.5px !important;
+    left: 16px !important;
+    padding: 32px 0px 32px 0px !important;
     gap: 32px;
     border-radius: 30px;
   }
