--- a/css/index_mediaqueries.css
+++ b/css/index_mediaqueries.css
@@ -94,6 +94,28 @@
 }
 
 @media (max-width: 428px) and (max-height: 926px) {
+  .mainpage {
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
+
+  ::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #f5f5f5;
+    border-radius: 10px;
+  }
+
+  ::-webkit-scrollbar {
+    width: 10px;
+    background-color: #f5f5f5;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #b0b0b0;
+  }
+  
+
   #animatedLogo {
     width: 64px !important;
     height: 78.03px !important;
@@ -101,14 +123,7 @@
     left: 38px !important;
     gap: 10px;
     display: flex;
-    background: #2a3647;
-  }
-
-  #animatedLogo {
-    background-image: url("./assets/img/whiteLogoLarge.svg");
-  }
-  #animatedLogo.animation-end {
-    background-image: url("./assets/img/logoLarge.svg");
+    position: relative;
   }
 
   .mainpageSignUpContainer {
@@ -117,6 +132,7 @@
     top: 778px;
     left: 70px;
     gap: 35px;
+    margin-top: 48px;
   }
 
   .textNotUser {
@@ -178,6 +194,7 @@
   .loginButtons {
     flex-direction: column;
     align-items: center;
+    margin-top: 32px;
   }
 
   .mainpageLoginButton {
@@ -202,5 +219,27 @@
     font-weight: 700;
     line-height: 19.2px;
     text-align: left;
+  }
+
+  .loginInputFields {
+    width: 422px;
+    height: 152px;
+    display: flex;
+  }
+
+  .loginEmail {
+    width: 85%;
+  }
+
+  .loginPassword {
+    width: 85%;
+  }
+
+  .legalButtonsContainer {
+    width: 246px;
+    height: 35px;
+    top: 869px;
+    left: 91px;
+    gap: 16px;
   }
 }
