--- a/css/index_mediaqueries.css
+++ b/css/index_mediaqueries.css
@@ -114,16 +114,56 @@
     border-radius: 10px;
     background-color: #b0b0b0;
   }
-  
 
   #animatedLogo {
-    width: 64px !important;
-    height: 78.03px !important;
-    top: 37px !important;
-    left: 38px !important;
-    gap: 10px;
+    width: 100.03px;
+    height: 121.97px;
+    top: 402px;
+    left: 164px;
+    gap: 0px;
     display: flex;
     position: relative;
+    transition: transform 400ms ease-in-out, width 400ms ease-in-out,
+      height 400ms ease-in-out, top 400ms ease-in-out, left 400ms ease-in-out;
+    animation: slide-tl 0.6s 0.4s forwards;
+  }
+
+  @-webkit-keyframes slide-tl {
+    0% {
+      top: 402px;
+      left: 164px;
+      width: 100.03px;
+      height: 121.97px;
+      -webkit-transform: translateY(0) translateX(0);
+      transform: translateY(0) translateX(0);
+    }
+    100% {
+      top: 80px;
+      left: 77px;
+      width: 100.03px;
+      height: 121.97px;
+      -webkit-transform: translateY(0) translateX(0);
+      transform: translateY(0) translateX(0);
+    }
+  }
+
+  @keyframes slide-tl {
+    0% {
+      top: 402px;
+      left: 164px;
+      width: 100.03px;
+      height: 121.97px;
+      -webkit-transform: translateY(0) translateX(0);
+      transform: translateY(0) translateX(0);
+    }
+    100% {
+      top: 80px;
+      left: 77px;
+      width: 100.03px;
+      height: 121.97px;
+      -webkit-transform: translateY(0) translateX(0);
+      transform: translateY(0) translateX(0);
+    }
   }
 
   .mainpageSignUpContainer {
