--- a/assets/templates/templates.css
+++ b/assets/templates/templates.css
@@ -1,192 +1,190 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-header{
-    width: 1440px;
-    height: 96px;
-    padding: 20px 40px 20px 348px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-shadow: 0 4px 4px 0px rgba(0, 0, 0, 0.1);
-    background-color: white;
+header {
+  width: 1440px;
+  height: 96px;
+  padding: 20px 40px 20px 348px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 4px 4px 0px rgba(0, 0, 0, 0.1);
+  background-color: white;
 }
 
-nav{
-    position: absolute;
-    top: 0;
-    background-color: rgba(42, 54, 71, 1);
-    height: 1024px;
-    width: 232px;
-    padding: 64px 0px 64px 0px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+nav {
+  position: absolute;
+  top: 0;
+  background-color: rgba(42, 54, 71, 1);
+  height: 1024px;
+  width: 232px;
+  padding: 64px 0px 64px 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
-p{
-    font-family: "inter";
-    font-weight: 400;
+p {
+  font-family: "inter";
+  font-weight: 400;
 }
 
-.headerTitel{
-    color: rgba(0, 0, 0, 1);
-    font-family: "inter";
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 19.2px;
+.headerTitel {
+  color: rgba(0, 0, 0, 1);
+  font-family: "inter";
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 19.2px;
 }
 
-.headerImg{
-    width: 104px;
-    height: 56px;
-    display: flex;
-    gap: 16px;
-    justify-content: center;
-    align-items: center;
+.headerImg {
+  width: 104px;
+  height: 56px;
+  display: flex;
+  gap: 16px;
+  justify-content: center;
+  align-items: center;
 }
 
-.imgHelp{
-    width: 20px;
-    height: 20px;
+.imgHelp {
+  width: 20px;
+  height: 20px;
 }
 
-.boundingHelp:hover .imgHelp{
-    width: 24px;
-    height: 24px;
+.boundingHelp:hover .imgHelp {
+  width: 24px;
+  height: 24px;
 }
 
-.boundingHelp{
-    width: 32px;
-    height: 32px;
-    display: flex;
-    align-items: center;
-    object-fit: cover;
-    cursor: pointer;
+.boundingHelp {
+  width: 32px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  object-fit: cover;
+  cursor: pointer;
 }
 
-.boundingProfil{
-    width: 48px;
-    height: 48px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: rgba(41, 171, 226, 1);
-    font-size: 18px;
-    border-radius: 559px;       /* Macht das Element rund */
-    border: 3px solid rgba(42, 54, 71, 1);  /* Rahmen des Kreises */
-    background-color: transparent;
-    background-color: rgba(255, 255, 255, 1);
-    cursor: pointer;
+.boundingProfil {
+  width: 48px;
+  height: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgba(41, 171, 226, 1);
+  font-size: 18px;
+  border-radius: 559px; /* Macht das Element rund */
+  border: 3px solid rgba(42, 54, 71, 1); /* Rahmen des Kreises */
+  background-color: transparent;
+  background-color: rgba(255, 255, 255, 1);
+  cursor: pointer;
 }
 
-.boundingProfil:hover{
-    background-color: rgba(12, 46, 98, 0.12);
+.boundingProfil:hover {
+  background-color: rgba(12, 46, 98, 0.12);
 }
 
-.logoSidebar{
-    width: 100.03px;
-    height: 121.97px;
+.logoSidebar {
+  width: 100.03px;
+  height: 121.97px;
 }
 
-.menuSidebar{
-    width: 232px;
-    height: 229px;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    color: rgba(205, 205, 205, 1);
-    font-size: 16px;
-    line-height: 19.2px;
+.menuSidebar {
+  width: 232px;
+  height: 229px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  color: rgba(205, 205, 205, 1);
+  font-size: 16px;
+  line-height: 19.2px;
 }
 
-.menuFrames{
-    width: 232px;
-    height: 30px;
-    gap: 8px;
-    padding: 8px 53px 8px 53px;
-    display: flex;
-    align-items: center;
-    text-align: center;
-    cursor: pointer;
+.menuFrames {
+  width: 232px;
+  height: 30px;
+  gap: 8px;
+  padding: 8px 53px 8px 53px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  cursor: pointer;
 }
 
-.imgSidebar{
-    height: 25px;
-    width: 25px;
+.imgSidebar {
+  height: 25px;
+  width: 25px;
 }
 
-.iconSidebar{
-    height: 30px;
-    width: 30px;
+.iconSidebar {
+  height: 30px;
+  width: 30px;
 }
 
-.privacySidebar{
-    width: 232px;
-    height: 317px;
-    gap: 4px;
-    padding: 243px 0px 0px 52px;
-    display: flex;
-    flex-direction: column;
-    color: rgba(168, 168, 168, 1);
-    font-size: 16px;
-    line-height: 19.2px;
+.privacySidebar {
+  width: 232px;
+  height: 317px;
+  gap: 4px;
+  padding: 243px 0px 0px 52px;
+  display: flex;
+  flex-direction: column;
+  color: rgba(168, 168, 168, 1);
+  font-size: 16px;
+  line-height: 19.2px;
 }
 
-.privacyColor{
-    cursor: pointer;
+.privacyColor {
+  cursor: pointer;
 }
 
-.flex_center{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.flex_center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.imgSummary{
-    background: url("../img/imgSummary.png");
-    object-fit: cover;
-    background-position: center;
-    background-size: cover;
+.imgSummary {
+  background: url("../img/imgSummary.png");
+  object-fit: cover;
+  background-position: center;
+  background-size: cover;
 }
 
-.imgHoverSummary{
-    background: url("../img/imgHoverSummary.png");
-    object-fit: cover;
-    background-position: center;
-    background-size: cover;
+.imgHoverSummary {
+  background: url("../img/imgHoverSummary.png");
+  object-fit: cover;
+  background-position: center;
+  background-size: cover;
 }
 
-.menuFrames:not(.nohover):hover .imgSummary{
-    background: url("../img/imgHoverSummary.png");
-    object-fit: cover;
-    background-position: center;
-    background-size: cover;
+.menuFrames:not(.nohover):hover .imgSummary {
+  background: url("../img/imgHoverSummary.png");
+  object-fit: cover;
+  background-position: center;
+  background-size: cover;
 }
 
-
-
-.menuFramesHover{
-    color: white;
-    background-color: rgba(9, 25, 49, 1);
+.menuFramesHover {
+  color: white;
+  background-color: rgba(9, 25, 49, 1);
 }
 
-.imgAddTask{
-    background: url("../img/imgAddTask.png");
-    object-fit: cover;
-    background-position: center;
-    background-size: cover;
+.imgAddTask {
+  background: url("../img/imgAddTask.png");
+  object-fit: cover;
+  background-position: center;
+  background-size: cover;
 }
 
-.imgHoverAddtask{
-    background: url("../img/imgHoverAddTasks.png");
-    object-fit: cover;
-    background-position: center;
-    background-size: cover;
+.imgHoverAddtask {
+  background: url("../img/imgHoverAddTasks.png");
+  object-fit: cover;
+  background-position: center;
+  background-size: cover;
 }
 
 /* .menuFrames:hover .imgAddTask{
@@ -196,32 +194,32 @@ p{
     background-size: cover;
 } */
 
-.imgBoard{
-    background: url("../img/imgBoard.png");
-    object-fit: cover;
-    background-position: center;
-    background-size: cover;
+.imgBoard {
+  background: url("../img/imgBoard.png");
+  object-fit: cover;
+  background-position: center;
+  background-size: cover;
 }
 
-.imgBoardHover{
-    background: url("../img/imgHoverBoard.png");
-    object-fit: cover;
-    background-position: center;
-    background-size: cover;
+.imgBoardHover {
+  background: url("../img/imgHoverBoard.png");
+  object-fit: cover;
+  background-position: center;
+  background-size: cover;
 }
 
-.imgContacts{
-    background: url("../img/imgContacts.png");
-    object-fit: cover;
-    background-position: center;
-    background-size: cover;
+.imgContacts {
+  background: url("../img/imgContacts.png");
+  object-fit: cover;
+  background-position: center;
+  background-size: cover;
 }
 
-.imgHoverContacts{
-    background: url("../img/imgHoverContacts.png");
-    object-fit: cover;
-    background-position: center;
-    background-size: cover;
+.imgHoverContacts {
+  background: url("../img/imgHoverContacts.png");
+  object-fit: cover;
+  background-position: center;
+  background-size: cover;
 }
 
 /* .menuFrames:hover .imgContacts{
@@ -231,15 +229,57 @@ p{
     background-size: cover;
 } */
 
-.privacyColor:hover{
-    color: rgba(41, 171, 226, 1);
-    font-weight: 700;
+.privacyColor:hover {
+  color: rgba(41, 171, 226, 1);
+  font-weight: 700;
 }
 
 .menuFrames:not(.nohover):hover {
-    background-color: rgb(42, 62, 89);
+  background-color: rgb(42, 62, 89);
 }
 
-.menuFrames:not(.nohover):hover .menuSidebarHover{
-    font-weight: 700;
+.menuFrames:not(.nohover):hover .menuSidebarHover {
+  font-weight: 700;
+}
+
+@media (max-width: 1290px) {
+  .headerTitel {
+    display: none;
+  }
+
+  .boundingHelp {
+    display: none;
+  }
+
+  .privacySidebar {
+    display: none;
+  }
+
+  .logoSidebar {
+    display: none;
+  }
+
+  header {
+    width: auto;
+  }
+
+  nav {
+    top: 0;
+    background-color: rgba(42, 54, 71, 1);
+    justify-content: space-between;
+    align-items: center;
+    left: 0;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    height: 110px;
+  }
+
+  .menuSidebar {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    width: auto;
+    height: 80px;
+  }
 }
