--- a/css/add_task.css
+++ b/css/add_task.css
@@ -277,10 +277,10 @@ input {
 
 .footer {
     margin-top: 150px;
-    width: 100%;
     display: flex;
     justify-content: space-between;
     font-size: 16px;
+    margin-right: 35px;
 }
 
 .button-footer {
@@ -334,9 +334,9 @@ input {
 
 .contact-list {
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 10px;
+    padding-right: 40px;
     background-color: #FFFFFF;
     color: black;
 }
