media query index 320px

--- a/assets/templates/desktop_template.html
+++ b/assets/templates/desktop_template.html
@@ -11,6 +11,7 @@
 <body onload="hoverSidebar()">
     <header>
         <div class="headerTitel">Kanban Project Management Tool</div>
+        <img class="altImg" src="../../assets/img/logoLarge.svg" alt="Logo">
         <div class="headerImg">
             <div class="boundingHelp"><img class="imgHelp" src="../../assets/img/help.png" alt=""></div>
             <div class="boundingProfil">
