--- a/assets/templates/templates.css
+++ b/assets/templates/templates.css
@@ -28,6 +28,10 @@ nav {
   align-items: center;
 }
 
+.altImg {
+  display: none;
+}
+
 p {
   font-family: "inter";
   font-weight: 400;
@@ -261,6 +265,11 @@ p {
 
   header {
     width: auto;
+  }
+
+  .altImg {
+    height: 50px;
+    display: flex;
   }
 
   nav {
