--- a/assets/templates/templates.css
+++ b/assets/templates/templates.css
@@ -15,6 +15,10 @@ header {
   background-color: white;
 }
 
+.altImg{
+  display: none;
+}
+
 nav {
   position: absolute;
   top: 0;
@@ -26,10 +30,6 @@ nav {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-}
-
-.altImg {
-  display: none;
 }
 
 p {
@@ -267,21 +267,22 @@ p {
     width: auto;
   }
 
-  .altImg {
+  /*.altImg {
     height: 50px;
     display: flex;
-  }
+  }*/
 
   nav {
-    top: 0;
     background-color: rgba(42, 54, 71, 1);
     justify-content: space-between;
     align-items: center;
     left: 0;
-    position: relative;
+    position: absolute;
     bottom: 0;
     width: 100%;
     height: 110px;
+    bottom: 0;
+    top: auto;
   }
 
   .menuSidebar {
