--- a/css/index_mediaqueries.css
+++ b/css/index_mediaqueries.css
@@ -22,8 +22,8 @@
 }
 
 @media (max-width: 670px) {
-  #animatedLogo {
-    width: 64px !important;
+  .animate {
+    width: 64px;
     height: 78.03px !important;
     top: 37px !important;
     left: 38px !important;
@@ -126,7 +126,7 @@
     background-color: #b0b0b0;
   }
 
-  #animatedLogo {
+  .animate {
     width: 100.03px;
     height: 121.97px;
     top: 402px;
@@ -135,8 +135,8 @@
     display: flex;
     position: relative;
     transition: transform 400ms ease-in-out, width 400ms ease-in-out,
-      height 400ms ease-in-out, top 400ms ease-in-out, left 400ms ease-in-out;
-    animation: slide-tl 0.6s 0.4s forwards;
+      height 400ms ease-in-out, top 400ms ease-in-out, left 400ms ease-in-out !important;
+    animation: slide-tl 0.6s 0.4s forwards !important;
   }
 
   @-webkit-keyframes slide-tl {
