--- a/css/signup_mediaqueries.css
+++ b/css/signup_mediaqueries.css
@@ -1,36 +1,12 @@
 @media (max-width: 1200px) {
   .signupContainer {
-    left: calc(50% - 211px);
+    left: calc((100vw - 598px) / 2);
   }
 
   .legalButtonsContainer {
-    left: calc(100vw / 2);
+    left: calc((100vw - 246px) / 2);
   }
 }
-
-/*@media (max-width: 800px) {
-  .logoSignupPage {
-    width: 60px;
-    width: 64px;
-    height: 78.03px;
-    top: 37px;
-    left: 38px;
-    gap: 10px;
-    display: flex;
-  }
-
-  .signupContainer {
-    width: 500px;
-    height: auto;
-    padding: 32px 0;
-    gap: 32px;
-    border-radius: 30px;
-  }
-
-  .legalButtonsContainer {
-    left: calc(20%);
-  }
-}*/
 
 @media (max-width: 780px) {
   .logoSignupPage {
@@ -46,7 +22,7 @@
     width: 396px;
     height: 595px;
     top: 165.5px;
-    left: 16px;
+    left: calc((100vw - 396px) / 2);
     padding: 32px 0px 32px 0px;
     gap: 32px;
     border-radius: 30px;
@@ -101,7 +77,7 @@
     width: 246px;
     height: 35px;
     top: 869px;
-    left: 91px;
+    left: calc((100vw - 246px) / 2);
     gap: 16px;
     display: flex;
     align-items: center;
@@ -143,6 +119,21 @@
     to {
       bottom: -140px;
     }
+  }
+}
+
+@media (max-width: 430px) {
+  .signupContainer {
+    width: 300px;
+    left: calc((100vw - 300px) / 2);
+  }
+
+  .signupInputFields {
+    width: 290px;
+  }
+
+  .emailContainer {
+    width: 280px;
   }
 }
 
