--- a/css/index_mediaqueries.css
+++ b/css/index_mediaqueries.css
@@ -109,7 +109,7 @@
   }
 }
 
-@media (max-width: 426px) and (max-height: 926px) {
+ @media (max-width: 426px) or (max-height: 926px) {
   .mainpage {
     overflow-x: hidden;
     overflow-y: auto;
