--- a/css/contacts_mediaqueries.css
+++ b/css/contacts_mediaqueries.css
@@ -60,6 +60,15 @@
     border-radius: 46px;
     display: flex;
     justify-content: center;
+    cursor: pointer;
+  }
+
+  .headlinesContainer {
+    display: none;
+  }
+
+  .contactsSidebar {
+    position: absolute;
   }
 }
 
