--- a/css/contacts_mediaqueries.css
+++ b/css/contacts_mediaqueries.css
@@ -63,12 +63,58 @@
     cursor: pointer;
   }
 
+  .addContactIcon:hover {
+    background-color: #29abe2;
+    border: none;
+    box-shadow: 0px 4px 4px 0px #00000040;
+  }
+
   .headlinesContainer {
     display: none;
   }
 
   .contactsSidebar {
     position: absolute;
+  }
+
+  .contactsArrow {
+    display: flex;
+    width: 32px;
+    height: 32px;
+    top: 128px;
+    left: 380px;
+    gap: 0px;
+    opacity: 0px;
+    position: absolute;
+    background-image: url(../assets/img/signupArrow.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    top: -10px;
+  }
+
+  .dotIconContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .dotIcon {
+    cursor: pointer;
+    width: 56px;
+    height: 56px;
+    top: 758px;
+    left: 356px;
+    padding: 12px 0px 0px 0px;
+    gap: 10px;
+    border-radius: 56px;
+    display: flex;
+    position: fixed;
+  }
+
+  .dotIconContainer:hover {
+    background-image: url(../assets/img/dotIconBlue.svg);
+    border: none;
+    box-shadow: 0px 4px 4px 0px #00000040;
   }
 }
 
