--- a/css/contacts_mediaqueries.css
+++ b/css/contacts_mediaqueries.css
@@ -40,6 +40,107 @@
   .contactsFullscreen.in {
     left: 500px;
   }
+
+  /*Add new contact overlay*/
+  .addNewContactOverlay {
+    position: fixed;
+    top: 50%;
+    left: 35%;
+    right: -100%;
+    transform: translate(-50%, -50%);
+    background-color: white;
+    box-shadow: -4px 0 6px 0 rgba(0, 0, 0, 0.1);
+    transition: right 0.5s ease;
+    z-index: 999;
+    border-radius: 30px;
+    opacity: 1;
+    width: 396px;
+    height: 760px;
+    gap: 49px;
+    border-radius: 30px;
+    display: flex;
+  }
+
+  .leftOverlayContent {
+    width: 396px;
+    height: 352px;
+    padding: 66px 24px 66px 24px;
+    gap: 12px;
+    display: flex;
+    border-radius: 30px 30px 0px 0px;
+  }
+
+  .leftContainer {
+    height: 104px;
+    gap: 16px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+
+  .contactsOverlayImg {
+    display: none;
+  }
+
+  .contactsOverlayHeadline {
+    font-family: Inter;
+    font-size: 47px;
+    font-weight: 700;
+    line-height: 56.4px;
+    text-align: left;
+    width: 282px;
+    height: 56px;
+    gap: 0px;
+    display: flex;
+  }
+
+  .contactsOverlaySubheadline {
+    width: 275px;
+    height: 24px;
+    gap: 0px;
+    opacity: 0px;
+    display: block;
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+  }
+
+  .overlayPersonContainer {
+    width: 120px;
+    height: 120px;
+    top: 292px;
+    left: 138px;
+    gap: 0px;
+    border-radius: 70px;
+  }
+
+  .overlayPersonLargeImg {
+    width: 120px;
+    height: 120px;
+    top: 292px;
+    left: 138px;
+    gap: 0px;
+    border-radius: 70px;
+    border: 3px 0px 0px 0px;
+    position: fixed;
+    display: flex;
+  }
+
+  .overlayInputContainer {
+    width: 364px;
+    height: 153px;
+    top: 444px;
+    left: 16px;
+    gap: 15px;
+  }
+
+  .overlayContactsInput {
+    width: 364px;
+    height: 41px;
+    gap: 8px;
+  }
 }
 
 @media (max-width: 880px) {
