media query add contact overlay

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -56,6 +56,10 @@ body {
   border-radius: 50%;
 }
 
+.whiteCloseOverlay{
+  display: none;
+}
+
 /*Overlay left*/
 .leftOverlayContent {
   width: 467px;
