--- a/css/contacts.css
+++ b/css/contacts.css
@@ -56,7 +56,7 @@ body {
   border-radius: 50%;
 }
 
-.whiteCloseOverlay{
+.whiteCloseOverlay {
   display: none;
 }
 
@@ -69,6 +69,7 @@ body {
   background: #2a3647;
   float: left;
   color: white;
+  border-radius: 30px 0px 0px 30px;
 }
 
 .leftContainer {
