--- a/css/contacts_mediaqueries.css
+++ b/css/contacts_mediaqueries.css
@@ -417,6 +417,55 @@
   .contactsFullscreen.in {
     left: calc((100vw - 461px) / 2);
   }
+
+  .contactDetailsButtons {
+    display: none;
+  }
+
+  .popupOverlay {
+    width: 116px;
+    height: 100px;
+    left: calc((100vw - 116px) / 2);
+    padding: 10px;
+    gap: 0px;
+    border-radius: 20px 20px 0px 20px;
+    position: absolute;
+    display: flex;
+    top: 758px;
+    top: calc((100vh / 2));
+    left: 356px;
+    background-color: white;
+    flex-direction: column;
+  }
+
+  .popupEditContactButton {
+    width: 96px;
+    height: 40px;
+    padding: 8px 0px 0px 0px;
+    gap: 8px;
+    opacity: 0px;
+    display: flex;
+    display: flex;
+    background-color: white;
+    cursor: pointer;
+    border: none;
+    align-items: center;
+  }
+
+  .popupDeleteContactButton {
+    width: 96px;
+    height: 40px;
+    padding: 8px 0px 0px 0px;
+    gap: 8px;
+    opacity: 0px;
+    display: flex;
+    display: flex;
+    background-color: white;
+    cursor: pointer;
+    border: none;
+    align-items: center;
+  }
+
 }
 
 @media (max-width: 428px) or (height: 766px) {
